# RapidRAW-Mobile

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_template.yml  feature_request.yml  issue_template.yml
.github/workflows/: build.yml  ci.yml  pr-ci.yml  release.yml
.kiro/specs/rapidraw-pwa-transformation/: design.md  requirements.md  tasks.md
data/: io.github.CyberTimon.RapidRAW.metainfo.xml
docs/: LIGHTROOM_XMP_REFERENCE.md
docs/tasks/: architecture.md  migration_plan.md
pwa/: README.md  package.json  tailwind.config.js  vite.config.ts
pwa/.cargo/: config.toml
pwa/src/: app.d.ts  app.html
pwa/src/lib/components/layout/: AppShell.svelte  PanelPlaceholder.svelte  TitleBar.svelte
pwa/src/lib/components/panel/: BottomBar.svelte  Editor.svelte  Filmstrip.svelte  MainLibrary.svelte
pwa/src/lib/types/: editor.ts  library.ts  panels.ts
pwa/src/lib/utils/: raw.ts
pwa/src/lib/wasm/: rapidraw.ts
pwa/src/routes/: +layout.svelte  +page.svelte  layout.css
pwa/src/routes/debug/: +page.svelte
pwa/wasm/: Cargo.toml
pwa/wasm/src/: lib.rs
pwa/wasm/src/core/: adjustments.rs  formats.rs  geometry.rs  image_loader.rs  image_processing.rs  image_utils.rs  metadata.rs  mod.rs  non_raw_metadata.rs  raw_metadata.rs  raw_processing.rs
rapidraw-pwa/: .gitignore  RESEARCH.md  lighthouserc.js  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts  vitest-setup-client.ts  vitest.config.ts
rapidraw-pwa/.github/workflows/: ci.yml
rapidraw-pwa/e2e/: glassmorphism-ui.spec.ts  image-processing.spec.ts  mobile-interactions.spec.ts  offline-functionality.spec.ts  performance-benchmarks.spec.ts  pwa-installation.spec.ts  responsive-layout.spec.ts  touch-gestures.spec.ts  touch-optimized-components.spec.ts
rapidraw-pwa/e2e/fixtures/: test-images.ts
rapidraw-pwa/playwright-report/: index.html
rapidraw-pwa/scripts/: build-wasm.js  generate-pwa-icons.js  watch-wasm.js
rapidraw-pwa/src/: app.css  app.html  service-worker.ts
rapidraw-pwa/src/lib/: debug-libraw.js  test-libraw.ts
rapidraw-pwa/src/lib/actions/: clickOutside.ts
rapidraw-pwa/src/lib/components/: DesktopNavigation.svelte  FilterPanel.svelte  FlagToggle.svelte  FolderSelection.svelte  FolderSidebar.css  FolderSidebar.svelte  GalleryLayout.svelte  GlassPanel.svelte  ImageViewer.svelte  Layout.svelte  LibrawTest.svelte  MobileNavigation.svelte  PWAInstallPrompt.svelte  PWAUpdateNotification.svelte  RawFileInput.svelte  StarRating.svelte  TabletLayout.svelte  ThumbnailBar.css  ThumbnailBar.svelte  Toolbar.svelte  TouchSlider.svelte
rapidraw-pwa/src/lib/components/__tests__/: ToolbarButton.test.ts
rapidraw-pwa/src/lib/components/ui/: Button.svelte  CollapsibleSection.svelte  Dropdown.svelte  Input.svelte  Switch.svelte  ToolbarButton.svelte  index.ts  ui-components.test.ts
rapidraw-pwa/src/lib/fallbacks/: javascript-image-processor.ts
rapidraw-pwa/src/lib/stores/: colorGradingStore.ts  folderStore.ts  imageStore.ts  uiStore.ts
rapidraw-pwa/src/lib/styles/: glassmorphism.css
rapidraw-pwa/src/lib/test-utils/: component-migration.test.ts  image-processing.test.ts  mobile-zoom-controls-integration.test.ts  mobile-zoom-controls.test.ts  store-testing.test.ts  wasm-build-pipeline.test.ts  wasm-integration.test.ts  wasm-test-utils.ts
rapidraw-pwa/src/lib/utils/: test-utils.test.ts
rapidraw-pwa/src/lib/wasm/: image-processing-wrapper.ts  raw-processing-wrapper.ts
rapidraw-pwa/src/lib/wasm/color-grading/: color-grading.js
rapidraw-pwa/src/routes/: +layout.svelte  +page.svelte
rapidraw-pwa/src/routes/test-components/: +page.svelte
rapidraw-pwa/static/: manifest.json
rapidraw-pwa/wasm/: Cargo.toml
rapidraw-pwa/wasm/color-grading/: Cargo.toml
rapidraw-pwa/wasm/color-grading/src/: lib.rs
rapidraw-pwa/wasm/image-processing/: Cargo.toml
rapidraw-pwa/wasm/image-processing/src/: lib.rs
rapidraw-pwa/wasm/raw-processing/: Cargo.toml
rapidraw-pwa/wasm/raw-processing/src/: lib.rs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai_connector.rs  culling.rs  denoising.rs  exif_processing.rs  file_management.rs  formats.rs  gpu_processing.rs  image_loader.rs  image_processing.rs  lens_correction.rs  main.rs  mask_generation.rs  panorama_stitching.rs  raw_processing.rs  tagging.rs
src-tauri/src/shaders/: blur.wgsl  shader.wgsl
src-tauri/ui/: ui.slint
src/components/adjustments/: Basic.tsx  Color.tsx  Curves.tsx  Details.tsx  Effects.tsx
src/components/modals/: CollageModal.tsx  ConfirmModal.tsx  CopyPasteSettingsModal.tsx  DenoiseModal.tsx  ImportSettingsModal.tsx  LensCorrectionModal.tsx  RenameFileModal.tsx  TransformModal.tsx
src/components/panel/: BottomBar.tsx  Editor.tsx  Filmstrip.tsx  FolderTree.tsx  MainLibrary.tsx  SettingsPanel.tsx
src/components/panel/editor/: EditorToolbar.tsx  ExifIcons.tsx  ImageCanvas.tsx
src/components/panel/right/: AIControls.tsx  AIPanel.tsx  ControlsPanel.tsx  CropPanel.tsx  ExportPanel.tsx  LibraryExportPanel.tsx  MaskControls.tsx  Masks.tsx  MasksPanel.tsx  MetadataPanel.tsx
src/components/ui/: AppProperties.tsx  ColorWheel.tsx  ExportImportProperties.tsx  ExportPresetsList.tsx  LUTControl.tsx  Slider.tsx  Switch.tsx
src/context/: ContextMenuContext.tsx  TaggingSubMenu.tsx
src/hooks/: useExportSettings.ts  useKeyboardShortcuts.tsx
src/utils/: CollageVariants.tsx  adjustments.tsx  maskUtils.tsx  themes.tsx
(+12 files in other folders)
