[package]
name = "rapidraw-wasm"
version = "0.1.0"
edition = "2024"

[features]
default = []
raw-processing = ["anyhow", "image", "rawler"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0", optional = true }
image = { version = "0.25.9", optional = true }
rawler = { path = "../../src-tauri/rawler/rawler", optional = true }
