[package]
name = "rapidraw-wasm"
version = "0.1.0"
edition = "2024"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["image-decoding"]
image-decoding = ["anyhow", "image", "kamadak-exif", "qoi", "exr"]
raw-processing = ["image-decoding", "rawler", "uuid", "rayon"]
raw-processing-threads = ["raw-processing", "wasm-bindgen-rayon"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
anyhow = { version = "1.0", optional = true }
image = { version = "0.25.9", optional = true }
kamadak-exif = { version = "0.6.1", optional = true }
qoi = { version = "0.4.1", optional = true }
exr = { version = "1.74.0", optional = true }
rayon = { version = "1.11.0", optional = true }
rawler = { path = "../../src-tauri/rawler/rawler", optional = true }
uuid = { version = "1.0", features = ["js"], optional = true }
wasm-bindgen-rayon = { version = "1.3.0", features = ["no-bundler"], optional = true }
