[package]
name = "color-grading"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
  "console"
] }
console_error_panic_hook = { workspace = true }
wee_alloc = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Color processing dependencies
nalgebra = "0.32"

[features]
default = ["console_error_panic_hook"]