[package]
name = "image-processing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
  "console",
  "WebGlRenderingContext",
  "WebGl2RenderingContext",
  "ImageData",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement"
] }
console_error_panic_hook = { workspace = true, optional = true }
wee_alloc = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Image processing dependencies
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
imageproc = "0.23"
nalgebra = "0.32"

[features]
default = ["console_error_panic_hook"]